[gd_scene load_steps=35 format=2]

[ext_resource path="res://system/components/movement/comp_movement_keyboard.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/player/player.gd" type="Script" id=2]
[ext_resource path="res://entities/player/player.png" type="Texture" id=3]
[ext_resource path="res://system/parts/entity/part_state_anim_handler.tscn" type="PackedScene" id=4]
[ext_resource path="res://system/parts/entity/part_state_handler.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/state.gd" type="Script" id=6]
[ext_resource path="res://system/components/movement/comp_movement_track_mouse.tscn" type="PackedScene" id=7]
[ext_resource path="res://system/components/rotation/comp_look_at.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/player/states/player_state_eat.gd" type="Script" id=9]
[ext_resource path="res://system/parts/entity/part_hitbox.tscn" type="PackedScene" id=10]
[ext_resource path="res://system/parts/entity/part_hurtbox.tscn" type="PackedScene" id=11]
[ext_resource path="res://system/parts/entity/part_player_projectile_handler.gd" type="Script" id=12]
[ext_resource path="res://system/parts/part_entity_spawner.tscn" type="PackedScene" id=13]
[ext_resource path="res://sounds/entity/player/player_throw.wav" type="AudioStream" id=14]
[ext_resource path="res://entities/player/player_hands_overlay.png" type="Texture" id=15]
[ext_resource path="res://system/random_scripts/visibility_controller.gd" type="Script" id=16]
[ext_resource path="res://sounds/entity/player/player_hit.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/entity/player/player_bite.wav" type="AudioStream" id=18]
[ext_resource path="res://system/parts/part_sound_streamer.tscn" type="PackedScene" id=19]
[ext_resource path="res://shaders/flash.tres" type="Material" id=20]
[ext_resource path="res://system/components/callers/comp_method_caller.tscn" type="PackedScene" id=21]
[ext_resource path="res://system/parts/part_input_detector.tscn" type="PackedScene" id=22]
[ext_resource path="res://ui/platform_exclusive_feature.gd" type="Script" id=23]
[ext_resource path="res://ui/hud/input_hints/mobile/joysticks/shooting_joystick/direction_hint.png" type="Texture" id=24]
[ext_resource path="res://ui/hud/input_hints/mobile/joysticks/shooting_joystick/direction_hint.gd" type="Script" id=25]
[ext_resource path="res://particles/entity/entity_death_particle.tscn" type="PackedScene" id=26]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.0
height = 6.0

[sub_resource type="Animation" id=5]
resource_name = "EAT"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../part_state_handler/EAT/bite_sound_effect:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IDLE"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "MOVE"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -2.0, 2.0, -2.0, 2.0, -2.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../part_state_handler/EAT/bite_sound_effect:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1, 6 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 5.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 8.0

[node name="player" type="KinematicBody2D" groups=["player"]]
collision_layer = 3
script = ExtResource( 2 )
MAX_HEALTH = 6
MAX_SPEED = 100
FRICTION = 700
DeathParticle = ExtResource( 26 )
ID = "player"
DEFAULT_STATE = "DEFAULT"

[node name="texture" type="Sprite" parent="."]
material = ExtResource( 20 )
position = Vector2( 0, -7 )
rotation = 0.0349066
texture = ExtResource( 3 )
hframes = 5

[node name="hands_overlay" type="Sprite" parent="texture"]
visible = false
material = ExtResource( 20 )
texture = ExtResource( 15 )
script = ExtResource( 16 )
visible_by_default = false

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="part_state_handler" parent="." instance=ExtResource( 5 )]

[node name="*" type="Node2D" parent="part_state_handler"]
script = ExtResource( 6 )

[node name="comp_movement_keyboard" parent="part_state_handler/*" instance=ExtResource( 1 )]
auto_execute = false
platform = "desktop"

[node name="comp_reset_look_at" parent="part_state_handler/*" instance=ExtResource( 8 )]
auto_execute = false

[node name="EAT" type="Node2D" parent="part_state_handler"]
script = ExtResource( 9 )

[node name="comp_movement_track_mouse" parent="part_state_handler/EAT" instance=ExtResource( 7 )]
auto_execute = false
platform = "desktop"

[node name="comp_look_at" parent="part_state_handler/EAT" instance=ExtResource( 8 )]
auto_execute = false

[node name="bite_sound_effect" type="AudioStreamPlayer2D" parent="part_state_handler/EAT"]
stream = ExtResource( 18 )
bus = "player_sounds"

[node name="part_state_anim_handler" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -7 )
states = [ "IDLE", "MOVE", "MOVE_PROJECTILE" ]

[node name="animation_player" type="AnimationPlayer" parent="part_state_anim_handler"]
root_node = NodePath("../../texture")
anims/EAT = SubResource( 5 )
anims/IDLE = SubResource( 3 )
anims/MOVE = SubResource( 4 )
anims/RESET = SubResource( 2 )

[node name="part_player_projectile_handler" type="Node2D" parent="."]
position = Vector2( 0, -7 )
script = ExtResource( 12 )

[node name="direction_indicator" type="Node2D" parent="part_player_projectile_handler"]
script = ExtResource( 23 )

[node name="pivot" type="Position2D" parent="part_player_projectile_handler/direction_indicator"]
script = ExtResource( 25 )

[node name="texture" type="Sprite" parent="part_player_projectile_handler/direction_indicator/pivot"]
position = Vector2( 10, 0 )
texture = ExtResource( 24 )
offset = Vector2( 8, 0 )

[node name="projectile_holder" type="Node2D" parent="part_player_projectile_handler"]
position = Vector2( 0, -11 )

[node name="projectile_texture" type="Sprite" parent="part_player_projectile_handler/projectile_holder"]

[node name="projectile_spawner" parent="part_player_projectile_handler" instance=ExtResource( 13 )]
entity_group = "projectiles"

[node name="throw_sound_effect" parent="part_player_projectile_handler" instance=ExtResource( 19 )]
stream = ExtResource( 14 )
bus = "player_sounds"

[node name="part_input_detector" parent="part_player_projectile_handler" instance=ExtResource( 22 )]
platform = "desktop"
input_to_detect = "controls_shoot"

[node name="shot_delay_timer" type="Timer" parent="part_player_projectile_handler"]
wait_time = 0.4
one_shot = true

[node name="change_to_death_screen" parent="." instance=ExtResource( 21 )]
method = {
"args": [ "change_scene_request", "death_screen", false ],
"caller": "game_events",
"method": "emit_signal"
}

[node name="part_mouth_hitbox" parent="." instance=ExtResource( 10 )]
TAGS = [ "PLAYER_MOUTH" ]
damage = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="part_mouth_hitbox"]
position = Vector2( 6, 0 )
shape = SubResource( 6 )

[node name="part_hurtbox" parent="." instance=ExtResource( 11 )]
position = Vector2( 0, -7 )
TAGS = [ "PLAYER" ]
IGNORE_TAGS = [ "PLAYER_MOUTH", "PLAYER_PROJECTILE" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="part_hurtbox"]
shape = SubResource( 7 )

[node name="hit_sound_effect" parent="part_hurtbox" instance=ExtResource( 19 )]
stream = ExtResource( 17 )
bus = "player_sounds"

[node name="part_drop_collector" type="Area2D" parent="."]
position = Vector2( 0, -7 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="part_drop_collector"]
shape = SubResource( 8 )

[node name="hunger_decrease_delay" type="Timer" parent="."]
wait_time = 4.0

[node name="invincibility_timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[connection signal="deleted" from="." to="change_to_death_screen" method="call_method"]
[connection signal="entered_eat_state" from="." to="texture/hands_overlay" method="hide"]
[connection signal="frozen" from="." to="part_state_handler/*/comp_movement_keyboard" method="stop_execution"]
[connection signal="frozen" from="." to="part_player_projectile_handler/part_input_detector" method="stop_execution"]
[connection signal="hurt" from="." to="part_hurtbox/hit_sound_effect" method="play_sound"]
[connection signal="self_give" from="." to="part_state_handler" method="set_owner"]
[connection signal="self_give" from="." to="part_state_handler/EAT/comp_look_at" method="target_node_receiver"]
[connection signal="state_changed" from="." to="." method="_on_player_state_changed"]
[connection signal="state_changed" from="." to="part_state_handler" method="_on_state_changed"]
[connection signal="state_changed" from="." to="part_state_anim_handler" method="set_state"]
[connection signal="unfrozen" from="." to="part_state_handler/*/comp_movement_keyboard" method="resume_execution"]
[connection signal="unfrozen" from="." to="part_player_projectile_handler/part_input_detector" method="resume_execution"]
[connection signal="go_to_next_state_request" from="part_state_handler" to="." method="go_to_next_state"]
[connection signal="executing" from="part_state_handler/*" to="part_mouth_hitbox" method="_disable_request"]
[connection signal="executing" from="part_state_handler/EAT" to="part_mouth_hitbox" method="_enable_request"]
[connection signal="component_value_update" from="part_state_handler/EAT/comp_movement_track_mouse" to="." method="set_movement_direction"]
[connection signal="add_tag_request" from="part_player_projectile_handler" to="." method="add_tag"]
[connection signal="projectile_collected" from="part_player_projectile_handler" to="texture/hands_overlay" method="show"]
[connection signal="projectile_thrown" from="part_player_projectile_handler" to="texture/hands_overlay" method="hide"]
[connection signal="remove_tag_request" from="part_player_projectile_handler" to="." method="remove_tag"]
[connection signal="show_hand_overlay" from="part_player_projectile_handler" to="texture/hands_overlay" method="show"]
[connection signal="entity_spawned" from="part_player_projectile_handler/projectile_spawner" to="part_player_projectile_handler" method="_on_projectile_spawner_entity_spawned"]
[connection signal="detected" from="part_player_projectile_handler/part_input_detector" to="part_player_projectile_handler" method="shoot_projectile"]
[connection signal="hit_detected" from="part_mouth_hitbox" to="." method="consume_enemy"]
[connection signal="hit_detected" from="part_hurtbox" to="." method="_on_damage_received"]
[connection signal="timeout" from="hunger_decrease_delay" to="." method="_on_hunger_decrease_delay_timeout"]
[connection signal="timeout" from="invincibility_timer" to="." method="_on_invincibility_timer_timeout"]
